[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/interface/MenuBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/LoadMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/interface/CloseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/Ui/Styles/header_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/interface/MenuButton.tscn" type="PackedScene" id=5]

[node name="LoadMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VSplitContainer" type="VSplitContainer" parent="Background/MarginContainer" index="0"]
margin_right = 1840.0
margin_bottom = 1000.0
split_offset = 60
dragger_visibility = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/VSplitContainer" index="0"]
margin_right = 1840.0
margin_bottom = 60.0

[node name="HSplitContainer" type="HSplitContainer" parent="Background/MarginContainer/VSplitContainer/MarginContainer" index="0"]
margin_right = 1840.0
margin_bottom = 60.0
split_offset = 60
dragger_visibility = 1

[node name="Control" type="Control" parent="Background/MarginContainer/VSplitContainer/MarginContainer/HSplitContainer" index="0"]
margin_right = 60.0
margin_bottom = 60.0

[node name="CloseButton" parent="Background/MarginContainer/VSplitContainer/MarginContainer/HSplitContainer/Control" index="0" instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Control2" type="Control" parent="Background/MarginContainer/VSplitContainer/MarginContainer/HSplitContainer" index="1"]
margin_left = 72.0
margin_right = 1840.0
margin_bottom = 60.0

[node name="CenterContainer" type="CenterContainer" parent="Background/MarginContainer/VSplitContainer/MarginContainer/HSplitContainer/Control2" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Background/MarginContainer/VSplitContainer/MarginContainer/HSplitContainer/Control2/CenterContainer" index="0"]
margin_left = 762.0
margin_top = 5.0
margin_right = 1006.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
text = "Load Game"

[node name="HSplitContainer" type="HSplitContainer" parent="Background/MarginContainer/VSplitContainer" index="1"]
margin_top = 72.0
margin_right = 1840.0
margin_bottom = 1000.0
split_offset = 1500
dragger_visibility = 1

[node name="SaveList" type="ItemList" parent="Background/MarginContainer/VSplitContainer/HSplitContainer" index="0"]
margin_right = 1500.0
margin_bottom = 928.0
rect_clip_content = false
allow_reselect = true

[node name="Control" type="Control" parent="Background/MarginContainer/VSplitContainer/HSplitContainer" index="1"]
margin_left = 1512.0
margin_right = 1840.0
margin_bottom = 928.0

[node name="LoadButton" parent="Background/MarginContainer/VSplitContainer/HSplitContainer/Control" index="0" instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_right = 0.0
margin_bottom = 0.0
text = "Load Game"
[connection signal="pressed" from="Background/MarginContainer/VSplitContainer/MarginContainer/HSplitContainer/Control/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="item_activated" from="Background/MarginContainer/VSplitContainer/HSplitContainer/SaveList" to="." method="_on_SaveList_item_activated"]
[connection signal="item_selected" from="Background/MarginContainer/VSplitContainer/HSplitContainer/SaveList" to="." method="_on_SaveList_item_selected"]
[connection signal="pressed" from="Background/MarginContainer/VSplitContainer/HSplitContainer/Control/LoadButton" to="." method="_on_LoadButton_pressed"]
